--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app"/>
+    <meta name="description" content="Jannick Sachariasen's Portfolio"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Portfolio</title>
+    <title>Portfolio - Jannick</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
