--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Jannick Sachariasen's Portfolio"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="../../manifest.json">
     <title>Portfolio - Jannick</title>
   </head>
   <body>
