--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/Logo.png" />
+    <link rel="icon" href="./Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Jannick Sachariasen's Portfolio"/>
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="manifest" href="../../manifest.json">
+    <link rel="apple-touch-icon" href="./Logo.png" />
+    <link rel="manifest" href="./manifest.json">
     <title>Portfolio - Jannick</title>
   </head>
   <body>
